fix: change stealth startup title on website

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -18,7 +18,7 @@ const experienceData = [
   },
   {
     company: "Stealth Startup",
-    position: "Freelance",
+    position: "DevOps \& Application Engineer",
     duration: "June, 2024 - Dec, 2024",
     location: "Remote",
     technologies: ["AWS", "Django", "PyTest", "Nginx", "Docker"],
